java_library(
    name = "lib",
    srcs = glob(["src/main/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = _SCALA_DEPS + _VERTX_DEPS + [
        "//api:lib",
        "//online:lib",
        "//online:metrics_lib",
        maven_artifact("ch.qos.logback:logback-classic"),
        maven_artifact("com.typesafe:config"),
        maven_artifact("io.netty:netty-all"),
        maven_artifact("io.micrometer:micrometer-registry-statsd"),
        maven_artifact("io.micrometer:micrometer-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact("org.slf4j:slf4j-api"),
    ],
)

test_deps = _VERTX_TEST_DEPS + [
    ":lib",
    "//api:lib",
    "//api:thrift_java",
    "//online:lib",
    maven_artifact("org.junit.jupiter:junit-jupiter-api"),
    maven_artifact("org.junit.platform:junit-platform-launcher"),
    maven_artifact("org.junit.platform:junit-platform-reporting"),
]

java_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = test_deps,
)

java_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.java"]),
    runner = "junit5",
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
