scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "//aggregator:lib",
        "//api:lib",
        "//api:thrift_java",
        "//online:lib",
        "//tools/build_rules/spark:spark-exec",
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_scala_artifact("com.fasterxml.jackson.module:jackson-module-scala"),
        maven_artifact("com.google.guava:guava"),
        maven_artifact("commons-io:commons-io"),
        maven_artifact("commons-lang:commons-lang"),
        maven_artifact("org.apache.kafka:kafka-clients"),
        maven_scala_artifact("org.json4s:json4s-core"),
        maven_scala_artifact("org.json4s:json4s-jackson"),
        maven_scala_artifact("org.json4s:json4s-ast"),
        maven_scala_artifact("org.scala-lang.modules:scala-collection-compat"),
        maven_scala_artifact("org.scala-lang.modules:scala-parser-combinators"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-core"),
        maven_artifact("org.apache.logging.log4j:log4j-slf4j-impl"),
        maven_artifact("com.google.code.gson:gson"),
        maven_artifact("jakarta.servlet:jakarta.servlet-api"),
        maven_artifact("org.yaml:snakeyaml"),
        maven_artifact("org.apache.datasketches:datasketches-memory"),
        maven_artifact("org.apache.datasketches:datasketches-java"),
        maven_scala_artifact("org.rogach:scallop"),
        maven_artifact("io.netty:netty-all"),
        maven_artifact("io.netty:netty-transport"),
        maven_artifact("io.netty:netty-handler"),
        maven_artifact("io.netty:netty-buffer"),
        maven_artifact("io.netty:netty-codec-http"),
        maven_artifact("io.netty:netty-common"),
        maven_artifact("io.netty:netty-codec"),
        maven_scala_artifact("io.delta:delta-spark"),
        maven_artifact("net.sf.py4j:py4j"),
        maven_artifact("org.apache.avro:avro"),
        maven_artifact("org.apache.thrift:libthrift"),
    ],
)

test_deps = [
    ":lib",
    "//aggregator:lib",
    "//aggregator:test_lib",
    "//api:lib",
    "//api:thrift_java",
    "//online:lib",
    "//tools/build_rules/spark:spark-exec",
    # Library
    maven_artifact("com.google.code.gson:gson"),
    maven_artifact("com.google.guava:guava"),
    maven_scala_artifact("org.rogach:scallop"),
    maven_artifact("commons.io:commons-io"),
    maven_artifact("commons.lang:commons-lang"),
    maven_scala_artifact("org.scala-lang.modules:scala-java8-compat"),
    maven_scala_artifact("com.fasterxml.jackson.module:jackson-module-scala"),
    maven_artifact("org.slf4j:slf4j-api"),
    maven_artifact("org.apache.logging.log4j:log4j-slf4j-impl"),
    maven_scala_artifact("org.json4s:json4s-core"),
    maven_scala_artifact("org.json4s:json4s-jackson"),
    maven_scala_artifact("org.json4s:json4s-ast"),
    maven_artifact("org.yaml:snakeyaml"),
    maven_artifact("org.apache.avro:avro"),
    maven_artifact("com.fasterxml.jackson.core:jackson-core"),
    maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
    maven_artifact("org.apache.hive:hive-exec"),
    # Testing
    maven_scala_artifact("org.scalatest:scalatest-matchers-core"),
    maven_scala_artifact("org.scalatest:scalatest-core"),
    maven_scala_artifact("org.scalatest:scalatest"),
    maven_scala_artifact("org.scalatest:scalatest-flatspec"),
    maven_scala_artifact("org.scalatest:scalatest-funsuite"),
    maven_scala_artifact("org.scalatest:scalatest-shouldmatchers"),
    maven_scala_artifact("org.scalactic:scalactic"),
    maven_scala_artifact("org.scalatestplus:mockito-3-4"),
    maven_artifact("org.scalatest:scalatest-compatible"),
    maven_artifact("junit:junit"),
    maven_artifact("com.novocode:junit-interface"),
    maven_artifact("org.mockito:mockito-core"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    data = glob(["spark/src/test/resources/**/*"]),
    # defined in prelude_bazel file
    jvm_flags = _JVM_FLAGS_FOR_ACCESSING_BASE_JAVA_CLASSES,
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)

jvm_binary(
    name = "spark_assembly",
    deploy_env = ["//tools/build_rules/spark:spark"],
    main_class = "ai.chronon.spark.Driver",
    runtime_deps = [":lib"],
)
