scala_library(
    name = "lib",
    visibility = ["//visibility:public"],
    exports = [
        "//orchestration/src/main/scala/ai/chronon/orchestration/temporal/constants:lib",
        "//orchestration/src/main/scala/ai/chronon/orchestration/temporal/runners:lib",
        "//orchestration/src/main/scala/ai/chronon/orchestration/temporal/workflows:lib",
    ],
)
