scala_library(
    name = "lib",
    visibility = ["//visibility:public"],
    exports = [
        "//orchestration/src/main/scala/ai/chronon/orchestration/temporal/constants:lib",
        "//orchestration/src/main/scala/ai/chronon/orchestration/temporal/converter:lib",
        "//orchestration/src/main/scala/ai/chronon/orchestration/temporal/runner:lib",
        "//orchestration/src/main/scala/ai/chronon/orchestration/temporal/workflow:lib",
    ],
)
